--- a/numpy_assignment.ipynb
+++ b/numpy_assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cef56fbf",
+   "id": "4c191191",
    "metadata": {},
    "source": [
     "## Consider the below code to answer further questions:\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "436f9de5",
+   "id": "ff94e48c",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d97b5e",
+   "id": "cd5d648a",
    "metadata": {},
    "source": [
     "## Q2. Write a code to print the data type of each and every element of both the variables list_ and array_list."
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4dcc35e2",
+   "id": "cb4c1973",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c7460e",
+   "id": "477d7ca3",
    "metadata": {},
    "source": [
     "## Q3. Considering the following changes in the variable, array_list:\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a4f4fa4e",
+   "id": "888f0829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04c52b9",
+   "id": "73eab042",
    "metadata": {},
    "source": [
     "## Q4. Write a code to find the following characteristics of variable, num_array:\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "db7e51df",
+   "id": "6fb9957d",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "31a129ff",
+   "id": "8fc58599",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d27723a9",
+   "id": "a814ce40",
    "metadata": {},
    "source": [
     "## Q5. Write a code to create numpy array of 3*3 matrix containing zeros only, using a numpy array creation function."
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "07f71de5",
+   "id": "9b202397",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4414c49d",
+   "id": "0b275339",
    "metadata": {},
    "source": [
     "## Q6. Create an identity matrix of shape (5,5) using numpy functions?\n",
@@ -229,33 +229,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a0434666",
+   "execution_count": 16,
+   "id": "8c3975a4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3808\\3575762919.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0midentity_matrix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meye\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\numpy\\lib\\twodim_base.py\u001b[0m in \u001b[0;36meye\u001b[1;34m(N, M, k, dtype, order, like)\u001b[0m\n\u001b[0;32m    212\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mM\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    213\u001b[0m         \u001b[0mM\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 214\u001b[1;33m     \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    215\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mM\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    216\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object cannot be interpreted as an integer"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "identity_matrix=np.eye(5)"
+    "identity_matrix=np.eye(5)\n",
+    "identity_matrix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef410a6f",
+   "id": "84c44647",
    "metadata": {},
    "outputs": [],
    "source": []
