--- a/Pandas_advance_assignment.ipynb
+++ b/Pandas_advance_assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "164ecd55",
+   "id": "71d917f7",
    "metadata": {},
    "source": [
     "## Q1. List any five functions of the pandas library with execution."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2e1eb17",
+   "id": "94c49484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "59a389f6",
+   "id": "ae57b6c2",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be267744",
+   "id": "71ad3bec",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "126651fd",
+   "id": "7b9a0906",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6e6ccb46",
+   "id": "a7e8e678",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "db1017c8",
+   "id": "ab5ecce1",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f47c497",
+   "id": "b3660f0b",
    "metadata": {},
    "source": [
     "## Q2. Given a Pandas DataFrame df with columns 'A', 'B', and 'C', write a Python function to re-index the DataFrame with a new index that starts from 1 and increments by 2 for each row."
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "04fc7a73",
+   "id": "3ca5d13b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c9538d40",
+   "id": "eead5a8d",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dc120beb",
+   "id": "bcdc2a67",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2e4537a4",
+   "id": "08f4dd9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "36c99bea",
+   "id": "eecad5bc",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb4cb53",
+   "id": "52f2aa6c",
    "metadata": {},
    "source": [
     "## Q3. You have a Pandas DataFrame df with a column named 'Values'. Write a Python function that iterates over the DataFrame and calculates the sum of the first three values in the 'Values' column. The function should print the sum to the console.\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3b143e99",
+   "id": "b8eaefde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "89082cb7",
+   "id": "5c8650e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a2e9d56e",
+   "id": "611cddc0",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "686e119c",
+   "id": "8c685e64",
    "metadata": {},
    "source": [
     "## Q4. Given a Pandas DataFrame df with a column 'Text', write a Python function to create a new column 'Word_Count' that contains the number of words in each row of the 'Text' column."
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c0610b82",
+   "id": "ceb3d2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b79acbe9",
+   "id": "f2985962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bf831ec4",
+   "id": "11ad00ba",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86be73a0",
+   "id": "55f120d0",
    "metadata": {},
    "source": [
     "## Q5. How are DataFrame.size() and DataFrame.shape() different?\n",
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e217c56",
+   "id": "41f631bf",
    "metadata": {},
    "source": [
     "## Q6. Which function of pandas do we use to read an excel file?\n",
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3828be8",
+   "id": "1d726800",
    "metadata": {},
    "source": [
     "## Q7. You have a Pandas DataFrame df that contains a column named 'Email' that contains email addresses in the format 'username@domain.com'. Write a Python function that creates a new column 'Username' in df that contains only the username part of each email address.\n",
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3a3acb9e",
+   "id": "f8a0a436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "47764fa1",
+   "id": "a396812c",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d05e9828",
+   "id": "cd9ecf3e",
    "metadata": {},
    "source": [
     "## Q8. You have a Pandas DataFrame df with columns 'A', 'B', and 'C'. Write a Python function that selects all rows where the value in column 'A' is greater than 5 and the value in column 'B' is less than 10. The function should return a new DataFrame that contains only the selected rows.\n",
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2ea8a05a",
+   "id": "923592e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bbd2aa2c",
+   "id": "7a3e2213",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f8c72f",
+   "id": "5eeb365d",
    "metadata": {},
    "source": [
     "## Q9. Given a Pandas DataFrame df with a column 'Values', write a Python function to calculate the mean, median, and standard deviation of the values in the 'Values' column."
@@ -1087,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "68bc74fa",
+   "id": "f67de816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c7b10352",
+   "id": "67f5b524",
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1776c49f",
+   "id": "2d848487",
    "metadata": {},
    "source": [
     "## Q10. Given a Pandas DataFrame df with a column 'Sales' and a column 'Date', write a Python function to create a new column 'MovingAverage' that contains the moving average of the sales for the past 7 days for each row in the DataFrame. The moving average should be calculated using a window of size 7 and should include the current day."
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "233fd50a",
+   "id": "608dede8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d8245f61",
+   "id": "b34685cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "4efbb4df",
+   "id": "84449983",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4dc7b37",
+   "id": "e5195f47",
    "metadata": {},
    "source": [
     "## Q11. You have a Pandas DataFrame df with a column 'Date'. Write a Python function that creates a new column 'Weekday' in the DataFrame. The 'Weekday' column should contain the weekday name (e.g. Monday, Tuesday) corresponding to each date in the 'Date' column.\n",
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2c96e82d",
+   "id": "1b9cbbc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "696ee4cb",
+   "id": "1619802b",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5460e87f",
+   "id": "122c373a",
    "metadata": {},
    "source": [
     "## Q12. Given a Pandas DataFrame df with a column 'Date' that contains timestamps, write a Python function to select all rows where the date is between '2023-01-01' and '2023-01-31'."
@@ -1392,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "641fabd8",
+   "id": "0444ac6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f12840c7",
+   "id": "a21fde24",
    "metadata": {},
    "outputs": [
     {
@@ -1465,16 +1465,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0ca3882",
+   "id": "036633b1",
    "metadata": {},
    "source": [
-    "## Q13. To use the basic functions of pandas, what is the first and foremost necessary library that needs to be imported?"
+    "## Q13. To use the basic functions of pandas, what is the first and foremost necessary library that needs to be imported?\n",
+    "\n",
+    "-- Pandas Libray needs to be imported first\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fede4168",
+   "id": "77bd477d",
    "metadata": {},
    "outputs": [],
    "source": []
