adding feature engg assignment 1

--- a/Feature_engg_assignment_1.ipynb
+++ b/Feature_engg_assignment_1.ipynb
@@ -234,6 +234,112 @@
     "3. Misleading Visualization\n",
     "4. Bias in Decision making\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1814b51e",
+   "metadata": {},
+   "source": [
+    "## Q7: You are working on a project that requires analyzing customer data. However, you notice that some of the data is missing. What are some techniques you can use to handle the missing data in your analysis?\n",
+    "\n",
+    "There are several techniques to handle missing data:-\n",
+    "1. Data imputation:-Replace missing values with the mean , meadian or mode  of the respective column.\n",
+    "\n",
+    "2. Deletion of the missing rows/columns:- this technique is  suitable if the amount of missing data is small\n",
+    "3. Interpolation:- We can use interpolation method ro estimate the missing value based on the neighbouring data points.\n",
+    "4. Manual Entry:- if data  can be obtained by other means then it can be manually entered."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0974d836",
+   "metadata": {},
+   "source": [
+    "## Q8: You are working with a large dataset and find that a small percentage of the data is missing. What are some strategies you can use to determine if the missing data is missing at random or if there is a pattern to the missing data?\n",
+    "\n",
+    "1. Exploratory Data Analysis (EDA): we can Start by conducting exploratory data analysis to visualize and understand the distribution of missing values. Create summary statistics, histograms, and heatmaps to examine patterns in missing data.\n",
+    "\n",
+    "2. Missing Data Mechanism Tests:\n",
+    "\n",
+    "    a.> Little's MCAR Test: Little's test checks whether the missing data is missing completely at random (MCAR). A p-value below a significance level suggests that data is not MCAR.\n",
+    "\n",
+    "    b.> Chi-Square Test: For categorical data, you can use chi-square tests to examine the relationship between missingness and categorical variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13af368e",
+   "metadata": {},
+   "source": [
+    "## Q9: Suppose you are working on a medical diagnosis project and find that the majority of patients in the dataset do not have the condition of interest, while a small percentage do. What are some strategies you can use to evaluate the performance of your machine learning model on this imbalanced dataset?\n",
+    "\n",
+    "--Evaluation Metrics:\n",
+    "--\n",
+    "1. Precision and Recall: Precision measures the proportion of true positive predictions among all positive predictions. Recall (Sensitivity) measures the proportion of true positive predictions among all actual positives. Focusing on these metrics is crucial when dealing with imbalanced datasets.\n",
+    "\n",
+    "2. F1 Score: The F1 score is the harmonic mean of precision and recall and provides a balance between the two metrics. It's especially useful when you want to find a balance between minimizing false positives and false negatives.\n",
+    "\n",
+    "3. Area Under the Receiver Operating Characteristic Curve (AUC-ROC): ROC and AUC provide a comprehensive view of model performance by considering different thresholds. AUC-ROC is valuable for binary classification problems.\n",
+    "\n",
+    "4. Area Under the Precision-Recall Curve (AUC-PR): AUC-PR focuses on the precision-recall trade-off, making it a suitable metric for imbalanced datasets, especially when the \n",
+    "\n",
+    "\n",
+    "--Ensemble Methods:\n",
+    "--\n",
+    "we can Use ensemble methods like Random Forests or Gradient Boosting with appropriate class weights to handle imbalanced data effectively.\n",
+    "\n",
+    "--Stratified Sampling:\n",
+    "--\n",
+    "When splitting the dataset into training and testing sets, use stratified sampling to maintain the class distribution in both sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e0a8fc4",
+   "metadata": {},
+   "source": [
+    "## Q10: When attempting to estimate customer satisfaction for a project, you discover that the dataset is unbalanced, with the bulk of customers reporting being satisfied. What methods can you employ to balance the dataset and down-sample the majority class?\n",
+    "\n",
+    "1. Random Under-sampling:\n",
+    "\n",
+    "Randomly select a subset of instances from the majority class to match the size of the minority class. This is a straightforward and commonly used down-sampling technique.\n",
+    "\n",
+    "2. Cluster-based Under-sampling:\n",
+    "\n",
+    "Cluster the majority class instances and then down-sample by selecting a representative instance from each cluster. This approach preserves diversity within the majority class.\n",
+    "\n",
+    "3. Synthetic Data Generation (SMOTE):\n",
+    "\n",
+    "While SMOTE is often used for oversampling, we can use it in combination with under-sampling to achieve a balanced dataset. First, oversample the minority class using SMOTE, and then apply random under-sampling to the majority class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b825e5c",
+   "metadata": {},
+   "source": [
+    "## Q11: You discover that the dataset is unbalanced with a low percentage of occurrences while working on a project that requires you to estimate the occurrence of a rare event. What methods can you employ to balance the dataset and up-sample the minority class?\n",
+    "\n",
+    "1. Random Over-sampling:\n",
+    "\n",
+    "Randomly duplicate instances from the minority class to match the size of the majority class. This is a straightforward and commonly used up-sampling technique.\n",
+    "\n",
+    "2. SMOTE (Synthetic Minority Over-sampling Technique):\n",
+    "\n",
+    "Generate synthetic examples for the minority class by interpolating between existing instances and their k-nearest neighbors. SMOTE helps create more diverse and meaningful synthetic data points.\n",
+    "\n",
+    "3. Cluster-based Over-sampling:\n",
+    "\n",
+    "Cluster the minority class instances and then up-sample by generating synthetic instances within each cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1874165",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
