commitint KNN assingmnet

--- a/KNN_ASSIGNMENT_1.ipynb
+++ b/KNN_ASSIGNMENT_1.ipynb
@@ -191,7 +191,7 @@
     "The main role of feature scalling in KNN are as follows:-\n",
     "\n",
     "1. Equal weightage of Features\n",
-    "2. Improved Model Performance\n",
+    "2. Improved Model Performance.\n",
     "3.Better Handling of Distance- Based Algorithms"
    ]
   },
